--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@quasar/extras": "^1.0.0",
     "axios": "^0.18.0",
     "heatmap.js": "^2.0.5",
-    "quasar": "^1.0.0-beta.0"
+    "quasar": "^1.0.0-beta.0",
+    "socket.io-client": "^2.2.0",
+    "vue-socket.io": "^3.0.7"
   },
   "devDependencies": {
     "@quasar/app": "^1.0.0-beta.0",
